tests/verifier/pass/test18.ial
function int32 foo()
{
    register int32 i;

    block entry
    {
        i = call.tail (foo);
        return i;
    }
}
