tests/verifier/fail/test24.ial
function int32 foo() cdecl
{
    register int32 i;

    block entry
    {
        i = call.tail (foo);
        return i;
    }
}
